--- a/lesson05/css/medium.css
+++ b/lesson05/css/medium.css
@@ -4,13 +4,13 @@
     .headings h1 {
         font-size: 70px;
         color: #ffffff;
-        text-align: center;
+        text-align: left;
         margin: .5rem;
     }
     header img {
         width: 150px;
         padding: 3% 0;
-        margin-left: 3%;
+        margin-left: 1%;
     }
     h2 {
         margin: .5rem;
@@ -43,8 +43,8 @@
     .motto {
         color: #ffffff;
         font-size: 25px;
-        text-align: center;
-        margin-left: 60px;
+        text-align: left;
+        margin-left: 40px;
     }
     .hero div {
         max-width: 100vw;
